--- a/styles/device_style.css
+++ b/styles/device_style.css
@@ -29,15 +29,29 @@
     color: #001E2C;
     font: 100% proxima-nova,Helvetica,Arial,sans-serif;
 }
-.b_1 .sub_content {
+.b_1 .sub_content{
+    position: relative;
+    width: 100%;
+    padding: 1px ;
+    border-bottom: 1px solid #B6BDBE;
+}
+.b_1 .sub_content h3{
+    margin-left: 5px;
+    
+}
+.b_1 .sub_content i{
+    line-height: 1;
+    margin-right: 5px;
+}
+/*.b_1 .sub_content {
     position: relative;
     margin: 0px 0px 1em;
     float: right;
-    /* width: 103.9%; */
+     width: 103.9%; 
 }
 .b_1 #wrap {
-    /* border-bottom: 1px solid #B6BDBE; */
-    /* margin-bottom: 25px; */
+     border-bottom: 1px solid #B6BDBE; 
+     margin-bottom: 25px; 
     padding-top: 2px;
     position: relative;
 }
@@ -47,14 +61,14 @@
 }
 .b_1 #wrap h1 {
     margin-left: 20px;
-}
-.b_1 h1 {
+}*/
+/*.b_1 h1 {
     font-size: 1.5rem;
     line-height: 10%;
     margin: 2.1rem 0px 1.68rem 200px;
     font-weight: bold;
     text-align: left;
-}
+}*/
 
 
 /////////////////////////
@@ -92,13 +106,13 @@
     margin-left: 20px;
 }
 
-.b_1 h1 {
+/*.b_1 h1 {
     font-size: 1.5rem;
     line-height: 10%;
     margin: 2.1rem 0px 1.68rem 200px;
     font-weight: bold;
     text-align: left;
-}
+}*/
 
 .b_1 h3 {
     line-height: normal;
@@ -258,9 +272,9 @@ h1.ng-binding {
     /* padding: 0.3em 2%; */
 }
 
-a:hover{
+/*a:hover{
     color: black;
-}
+}*/
 .b_1 .img {
     width: 100px;
 }
