--- a/styles/thumbnail.css
+++ b/styles/thumbnail.css
@@ -7,7 +7,7 @@
 div {
     border: 0;
     font: inherit;
-    font-size: 80%;
+    /*    font-size: 80%;*/
     padding: 0 1.5px 0 1.5px;
     vertical-align: baseline;
     display: block;
@@ -46,6 +46,23 @@ div {
     width: 100%;
     /* margin: 15px 22px; */
 }
+.b_2 .sub_content{
+    position: relative;
+    width: 100%;
+    padding: 1px ;
+    border-bottom: 1px solid #B6BDBE;
+}
+.b_2 .sub_content h3{
+    margin-left: 5px;
+    font-size: inherit;
+    font-weight: bold;
+
+}
+.b_2 .sub_content i{
+    line-height: 1;
+    margin-right: 5px;
+}
+
 .b_2 #wrap {
     border-bottom: 1px solid #B6BDBE;
     margin-bottom: 15px;
@@ -53,7 +70,7 @@ div {
     /* padding-bottom: 2px; */
     position: relative;
 }
- .b_2 #wrap h1 {
+.b_2 #wrap h1 {
     margin-left: 20px;
 }
 
@@ -65,7 +82,7 @@ div {
     text-align: left;
     margin: 2.1rem 0px 1.68rem 2px;
 }
- 
+
 .list_style_buttons {
     position: absolute;
     right: 0;
@@ -91,7 +108,7 @@ li.device.cf.ng-scope {
 
 .b_2 h4 {
     font-size: 1.28rem;
-   
+
 }
 
 h4.ng-binding {
@@ -120,9 +137,9 @@ ul{
     /*padding: 0.3em 2%; */
 }
 
-a:hover{
+/*a:hover{
     color: black;
-}
+}*/
 
 .ifs_bannerT{
     padding:.8em 5%;
@@ -159,7 +176,7 @@ ul.grid li { position: relative; background: white; display: block; float: left;
 /** clearfix **/
 .clearfix:after { content: "."; display: block; clear: both; visibility: hidden; line-height: 0; height: 0; }
 .clearfix { /* display: inline-block; */ }
- 
+
 html[xmlns] .clearfix { display: block; }
 * html .clearfix { height: 1%; }
 .b_2 .clearfix  {
