--- a/styles/device_style.css
+++ b/styles/device_style.css
@@ -2,20 +2,10 @@
 
 .ignore{
     height: 3.25em;
-    /*position: relative;*/
 }
 
-.b_1 .main_content {
-    /* background-color: #E7E9EC; */
-    /* height: auto; */
-}
 .deviceinfo   .hide-on-small-only {
-/*         margin-lefT: -1%; */
-         width: 50%; 
-}
-
-.deviceinfo   .hide-on-med-and-up {
-/*         margin-lefT: -5%; */
+    width: 50%; 
 }
 
 
@@ -37,64 +27,28 @@
 }
 .b_1 .sub_content h3{
     margin-left: 5px;
-    
+
 }
 .b_1 .sub_content i{
     line-height: 1;
     margin-right: 5px;
 }
-/*.b_1 .sub_content {
-    position: relative;
-    margin: 0px 0px 1em;
-    float: right;
-     width: 103.9%; 
-}
-.b_1 #wrap {
-     border-bottom: 1px solid #B6BDBE; 
-     margin-bottom: 25px; 
-    padding-top: 2px;
-    position: relative;
-}
-.b_1 .list_style_buttons {
-    position: absolute;
-    right: 0px;
-}
-.b_1 #wrap h1 {
-    margin-left: 20px;
-}*/
-/*.b_1 h1 {
-    font-size: 1.5rem;
-    line-height: 10%;
-    margin: 2.1rem 0px 1.68rem 200px;
-    font-weight: bold;
-    text-align: left;
-}*/
 
 
-/////////////////////////
-
-.ignore{
+/*.ignore{
     height: 3.25em;
     position: relative;
-}
+}*/
 
 .b_1 section {
     display: block;
-   
     background-color: #E7E9EC;
 
 }
 
 .b_1 #wrap {
-    /* border-bottom: 1px solid #B6BDBE; */
     border-bottom: 1px solid #B6BDBE;
-    /* margin-bottom: 3px; */
-    /* padding-top: 2px; */
-    /* padding-left: 40px; */
-    /* padding-right: 40px; */
-    /* padding-bottom: 25px; */
     position: relative;
-    /* margin-top: 1px; */
 }
 
 .b_1 .list_style_buttons {
@@ -106,13 +60,7 @@
     margin-left: 20px;
 }
 
-/*.b_1 h1 {
-    font-size: 1.5rem;
-    line-height: 10%;
-    margin: 2.1rem 0px 1.68rem 200px;
-    font-weight: bold;
-    text-align: left;
-}*/
+
 
 .b_1 h3 {
     line-height: normal;
@@ -120,7 +68,6 @@
     display: block;
     font-size: 1.2em;
     font-weight: bold;
-    /* padding-top: 20px; */
     text-align: left;
 }
 
@@ -138,89 +85,18 @@
     text-align: center;
 }
 
-/*.b_1 .button {
-    float: right;
-    color: #fff;
-    background-color: #863d8d;
-    text-shadow: -1px 1px #863d8d;
-    height: 2.5em;
-    display: inline-block;
-    margin: 0 0 10 0;
-    padding: 15px 25px; 
-    text-align: center;
-    font-size: 18px;
-    border: none;
-    width: 10em;
-    float: right;
-    bottom: 0%;
-    box-sizing: border-box;
-    float: right;
-    position: relative; 
-    right: 0px;
-    margin: 0px; 
-    top: -190px;
-    width: 80px;
-    height: 70px;
-    margin-right: 10px; 
-    z-index: 15; 
-    border-radius: 3px 0px 0px 3px; 
-    top: 0; 
-    right: 0; 
-    
-}*/
 .b_1  .buttonClass  {
-    /* float: right; */
     color: #fff;
-    /* background-color: #863d8d; */
     text-shadow: -1px 1px #863d8d;
-    /* height: 2.5em; */
-    /* display: inline-block; */
-    /*    margin: 0 0 0 0;*/
-    /* padding: 10px 20px; */
-    /* text-align: center; */
-    /* font-size: 18px; */
-    /* border: none; */
-    /* width: 10em; */
-    /* float: right; */
-    /* bottom: 0%; */
-    /* box-sizing: border-box; */
-    /* float: right; */
-    /* right: 0px; */
-    /* margin: 0px; */
-    /* top: 190px; */
-    /* width: 90px; */
-    /* height: 70px; */
-    /* margin-right: 10px; */
-/*     margin-bottom: 20px; */
-    /* z-index: 15; */
-    /* border-radius: 3px 0px 0px 3px; */
-    /* top: 0; */
-    /* right: 0; */
-    /* top: -190px; */
-    /* margin-top: 20px; */
-    /* margin-right: 1px; */
 }
 
-.b_1 .waves-effect  {/*.b_1.Now.waves-effect waves-light  btn*/
-    /* position: relative; */
-    /* float: right; */
-    /* z-index: 90; */
-    /* margin-bottom: 2px; */
-    /* top: -190px; */
-    /* width: 110%; */
+.b_1 .waves-effect  {
     color: #fff;
     background-color: #863d8d;
-    text-shadow: -1px 1px #863d8d;
-    /* height: 2.5em; */
-    /* display: inline-block; */
-    /*    margin: 0 0 0 0;*/
-    /* padding: 2px 2px; */
+    text-shadow: -1px 1px #863d8d;    
     text-align: center;
-    font-size: 15px;
-    /* border: none; */
-    /* margin-bottom: 20px; */
-    /* margin-right: -30px; */
-    }
+    font-size: 15px;   
+}
 
 .b_1 .Later waves-effect waves-light btn  {
     width: 100%;
@@ -228,28 +104,17 @@
     position: fixed;
     margin-top: 10px;
     display: inline-block;
-
-    /*    width: 8%;*/
     color: #fff;
     background-color: #863d8d;
     text-shadow: -1px 1px #863d8d; 
     height: 1.5em;
-
-    /*    margin: 0 0 0 0;*/
     padding: 2px 20px;
     text-align: center;
     font-size: 15px; 
     border: none;
 }
-/*.deviceinfo  .btn {
-     color: #B159B9
-      margin-bottom: 10px; 
-}*/
-
 .b_1 .row {
-    /* margin-bottom: 0px; */
     float: center;
-    /* height: 38%; */
 }
 
 h4.ng-binding {
@@ -269,12 +134,7 @@ h1.ng-binding {
     padding: 0;
     list-style: none;
     font-size: .92857143em;
-    /* padding: 0.3em 2%; */
 }
-
-/*a:hover{
-    color: black;
-}*/
 .b_1 .img {
     width: 100px;
 }
@@ -288,10 +148,8 @@ h1.ng-binding {
     width: 100%;
 }
 .b_1 .devicelist {
-    /* background: white; */
     width: 100%;
     min-width: 290px;
-    /* max-width: 550px; */
     margin: 0 auto;
     margin-bottom: 30px;
     border-radius: 0 0 20px 20px;
@@ -320,7 +178,6 @@ with animation
     text-decoration: none;
 }
 
-//with animation 
 .b_1 .devicelist li:hover {
     background: #FDF6E3;
     opacity: 1;
@@ -330,39 +187,25 @@ with animation
     transform: scale(1.2);
 }
 
-.b_1 .cf {/*.b_1 li.device.cf.ng-scope*/
-    /* margin: 0; */
-    /* padding: 0; */
-    /* padding-bottom: 10px; */
-    /* padding-left: 15px; */
-    /* padding-right: 15px; */
+.b_1 .cf {
     padding-top: px;
-    /* border-bottom: 2px; */
-    /* padding-bottom: 5px; */
-    /* width: 705px; */
-    /* height: auto; */
 }
 
 .b_1 .device img {
-    /* display: block; */
-    /* float: right; */
     width: 120px;
     -webkit-border-radius: 12px;
     border-radius: 12px;
     margin-right: 150px;
     margin-bottom: 20px;
-    /* margin-top: 20px; */
 }
 
 .b_1 .device info {
     margin: 0;
     padding: 10px 10px 0 10px;
-
     opacity: .9;
     -webkit-transition: all 0.3s ;
     display: block;
     float: left;
-    //padding-left: 120px !important;
 }
 
 .device:last-child {
@@ -372,15 +215,9 @@ with animation
 .deviceinfo {
     font-size: 0.9em;
     line-height: 200%;
-    /* background: #EEE8D5; */
     color: #0F4150;
     width: 100%;
-    /* min-width: 320px; */
-    /* max-width: 620px; */
-    /* margin: 0 auto; */
-    /* margin-top: 30px; */
     margin-bottom: 15px;
-    /* padding: 0px 30px; */
     border-radius: 10px;
     z-index: 20;
     text-align: center;
@@ -395,19 +232,13 @@ with animation
 
 .deviceinfo h2{
     font-size: 1.92rem;
-    /*    line-height: 110%;
-    margin: 1.78rem 0 1.424rem 0;*/
 }
 
 .deviceinfo h3{
     font-size: 1.56rem;
-/*    float: left;*/
-    /*    line-height: 110%;
-    margin: 1.78rem 0 1.424rem 0;*/
 }
 
 .deviceinfo img {
-    /* width: 30%; */
     border-radius: 10px;
     margin-top: 90px;
 }
@@ -415,30 +246,24 @@ with animation
 
 .deviceinfo .row {
     margin-bottom: 10px;
-    /* margin-lefT: -50%; */
     background-color: #fafafa;
     height: 75px;
     width: 70%;
 }
 
 .deviceinfo .row .col {
- padding-top: 0px;
- /* padding-right: 0.75rem
-; */
- /* padding-left: 0.75rem; */
+    padding-top: 0px;
 }
 
 .b_1 .main_content{
-    background-color: #E7E9EC;
-    /* height: inherit; */
+    background-color: #E7E9EC;   
 }
 
 .sub_content {
     position: relative;
     margin: 0 0 1em;
     float: right;
-    width: 100%;
-    /* z-index: 999; */
+    width: 100%;   
 }
 .sub_content h2 {
     float: left;
@@ -446,7 +271,6 @@ with animation
     font-size: 1.5em;
 }
 
-/*more animation */
 
 .b_1.device.ng-enter.ng-enter-active,
 .b_1.device.ng-leave {
@@ -462,7 +286,7 @@ with animation
     overflow: hidden;
 }
 .b_1 .row:after {
-     content: ""; 
+    content: ""; 
     display: table;
     clear: both;
 }
@@ -471,7 +295,6 @@ with animation
     clear: both;
 }
 
-/*devide 2 into 1*/
 @media screen and (max-width: 480px) {
 
 }
