--- a/styles/style.css
+++ b/styles/style.css
@@ -77,6 +77,16 @@ nav .button-collapse {
 a {
     color: black;
 }
+
+.search_class {/*search for small*/
+    width: 100%;
+    height: 45px;
+    position: absolute;
+    padding: 0 0 0 58.41;
+}
+#search{/*search field*/
+    background-color: #863d7d;
+}
 @media screen and (max-width: 480px)
 {
 
